--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^4.0.1",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://gauravvxv.github.io",
