--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gsap": "^3.12.5",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-github-calendar": "^4.0.1",
+    "react-icon-cloud": "^4.1.4",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-social-icons": "^6.18.0",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "daisyui": "^4.12.13",
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.4.14"
   }
 }
