--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-social-icons": "^6.18.0",
     "styled-components": "^6.1.0",
+    "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://gauravvxv.github.io",
